[package]
name = "vosx"
description = "Host CLI for VOS — peer-to-peer OS for collaborative, replicated apps. Run actors on a deterministic PVM, manage spaces, replicate state via CRDT or Raft."
keywords = ["vos", "p2p", "actor", "crdt", "cli"]
categories = ["command-line-utilities", "network-programming", "wasm"]
version = "0.1.0"
edition = "2024"
authors = ["Daniel Olano <daniel@olanod.com>"]
# Ship the prebuilt registry ELF and canonical authority PVM inside the crate
# so `cargo install vosx` has its platform actors available out of the box.
# Refresh them from the local actor tree with the corresponding just recipes.
include = [
    "src/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "blobs/space_registry.elf",
    "blobs/space_authority.pvm",
]

[dependencies]
vos = { path = "../vos", version = "0.1.0", features = ["std", "http", "storage", "network"] }
space-authority = { path = "../actors/space-authority", version = "0.1.0", default-features = false }
# `vosx zk pin` transpiles the provable ELF here and delegates the heavy
# zkpvm measurement to the prover extension's `measure_catalog` handler, so
# vosx pulls no zkpvm/stwo.
# Direct dep for ELF → PVM blob conversion. vos uses it
# transitively but doesn't re-export, so vosx pulls its own.
# `version` is what crates.io resolves at publish time.
grey-transpiler = { workspace = true }
javm = { workspace = true }
# The per-space clock + verifiable-randomness feed now lives in
# `vos::chronos_feed` (behind vos's `network` feature); its protocol types +
# the `ChronosRef` client are in `vos::chronos`, and the VRF primitive it uses
# rides along inside vos — so vosx no longer depends on the chronos actor or
# vrf directly.
# Content-addressed cache + IPFS resolver dependency for the
# blob store. Stays a thin dep — no daemon required for `Path`
# and `Hash` sources, only `Cid` and `Url` resolution touch
# external services.
hex = "0.4"
# base58 (Bitcoin alphabet) for the `vos1…` invite token string —
# compact, unambiguous, double-click-selectable. Only used by
# `token.rs`.
bs58 = "0.5"
# anyhow is the existing project's only convenience-error crate;
# the new `space *` commands return Result for clean error
# bubbling through the clap dispatcher.
anyhow = "1"
# Read the registry's genesis DAG root from its redb during
# `space new`. Mirrors the dev-dep usage in vos's
# elf_integration tests; vos uses redb internally but doesn't
# re-export it.
redb = "2"
# `kill -0` to detect stale endpoint files left by a crashed
# `space up` daemon.
libc = "0.2"
# OS entropy for the chronos beacon feed (the leader samples 32
# fresh bytes per advance; a draw failure skips the pass rather
# than ever feeding zero entropy).
getrandom = "0.2"

# CLI / serde
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# UTC `created_at` formatting in spaces.toml. `formatting` for
# the `format` API; `macros` so the format-description literal
# is checked at compile time.
time = { version = "0.3", default-features = false, features = ["formatting", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Bridges the `log` facade (vos's actor-side `vos::log::*` calls
# such as the warnings inside `Context::resolve`) into tracing
# so they surface through the same subscriber.
tracing-log = "0.2"

# libp2p multiaddr parsing for `--listen` / `--connect`. The
# rest of the network plumbing is owned by `vos::network`.
libp2p = { version = "0.56", default-features = false, features = ["tcp", "yamux", "noise", "tokio", "mdns", "macros", "ping", "identify", "request-response", "gossipsub"] }

[dev-dependencies]
# Dev-only: the registry protocol (rows / status / canonical signing
# bytes / the `RegistryRef` client) now lives in `vos::registry`, so the
# shipped `vosx` binary carries no dependency on the space-registry actor
# crate. It stays a dev-dependency purely for `op_sign`'s interop test,
# which cross-checks a libp2p-produced signature against the actor's
# `verify_op_sig` (ed25519 — deliberately kept in the actor so its
# `ed25519-dalek` dep never reaches `vos`).
space-registry = { path = "../actors/space-registry", version = "0.1.0", default-features = false }
