[package]
name = "wink"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../support/nu-protocol", package = "nu-protocol" }
wink-macro = { path = "../wink-macro" }
log = { workspace = true }
miniserde = { workspace = true }
pico-args = "0.5.0"

embassy-executor = { workspace = true }
wasync = { path = "../support/wasync" }
wasync-io = { path = "../support/wasync-io", features = ["log", "fs"] }

simple-http-server = { path = "../support/simple-http-server", optional = true }
embassy-time = { workspace = true, features = ["std"], optional = true }

[features]
http = ["simple-http-server", "wasync-io/net", "embassy-time"]
