[package]
name = "writ"
version = "0.1.0"
edition = "2024"

[dependencies]
nu-protocol = { path = "../support/nu-protocol" }
writ-macro = { path = "../writ-macro" }
log = { workspace = true }
miniserde = { workspace = true }
pico-args = "0.5.0"

embassy-executor = { workspace = true }
wasync = { path = "../support/wasync", features = ["fs"]  }

simple-serve = { path = "../support/simple-serve", optional = true }
embassy-time = { workspace = true, features = ["std"], optional = true }

[features]
net = ["wasync/net"]
http = ["net", "dep:simple-serve", "dep:embassy-time"]

_log_internal = []
