[package]
name = "zkpvm"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["prover"]
# Prover-side: trace generation, proof creation, the tracer, blake3 commitments,
# and parallel iteration.  Disable for a verifier-only build (smaller dep tree,
# no_std-friendly).
prover = ["dep:rayon", "dep:blake3", "dep:curve25519-dalek"]
# Diagnostic helpers (`debug_claimed_sums`) for prover-side debugging of
# logup imbalances.  Off by default so the production prover surface
# stays clean; turn on with `--features debug-internals` to bisect
# "ConstraintsNotSatisfied" vs. "claimed logup sum is not zero" failure
# modes when adding constraints.
debug-internals = ["prover"]

[dependencies]
zkpvm-derive = { workspace = true }
javm = { workspace = true }
stwo = { workspace = true }
stwo-constraint-framework = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
impl-trait-for-tuples = { workspace = true }
rayon = { workspace = true, optional = true }
blake3 = { version = "1", optional = true }
# Host-side reference implementation of Ristretto scalar mult, used by
# the TracingPvm precompile capture path so the prover can record the
# canonical output bytes alongside the call.  Same crate cipher-clerk
# uses for its on-chain math, so the precompile boundary is by-
# construction agreement with cipher-clerk's own crypto.
curve25519-dalek = { version = "4.1", optional = true, default-features = false, features = ["alloc", "precomputed-tables", "zeroize"] }

[dev-dependencies]
# Same rev the prover extension pins — it carries the `SLT rd, x0, rs2`
# x0-as-rs1 lowering the voucher-check ELF's kernel code needs.
grey-transpiler = { git = "https://github.com/olanod/jar.git", rev = "6075cec9989b5fe221051fb87be6664459a6148e" }
bincode = "1"
zkpvm-verifier = { workspace = true }
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "precomputed-tables"] }
# Dynamic-witness smoke test (voucher_check_smoke.rs) builds
# cipher-clerk Public/Secret rkyv archives to feed voucher-check's
# WITNESS_BUFFER region — exercises the per-voucher proof path.
cipher-clerk = { path = "/home/daniel/src/virto/cipher-clerk", default-features = false, features = ["viewing-keys", "voucher", "helpers"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck", "little_endian", "pointer_width_32"] }

# Both examples demonstrate the prover end-to-end; mark them
# prover-only so a verifier-only build (`--no-default-features`) skips
# them instead of failing on the unresolved prover surface. (Examples
# can't use a `#![cfg]` gate like the integration tests — a cfg'd-out
# example has no `main`.)
[[example]]
name = "multi_segment"
required-features = ["prover"]

[[example]]
name = "prove_and_verify"
required-features = ["prover"]

[lints.clippy]
module-inception = { level = "allow", priority = 0 }
# AIR fill code is byte-position-indexed throughout (val_b[0..8],
# carry chains, schoolbook positions).  `for i in 0..8 { col[i] =
# ... }` is the natural shape; the iterator-based clippy suggestion
# (`for (i, item) in col.iter_mut().enumerate()`) obscures that
# `i` is a position in the constrained byte layout.
needless_range_loop = { level = "allow", priority = 0 }
# Lookup-tuple builders take many small arguments by design (one
# per column); collapsing them into a struct-arg would just rename
# the same parameters.
too_many_arguments = { level = "allow", priority = 0 }
# Hand-formatted ASCII tables / continuation lines in doc-comments
# don't always satisfy the markdown 2-space-indent rule; the
# rendered output is fine in both rustdoc and our review tooling.
doc_lazy_continuation = { level = "allow", priority = 0 }
