[workspace]

[package]
name = "chronos-crypto-spike"
version = "0.1.0"
edition = "2024"

[features]
default = ["bin"]
bin = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Ristretto255 group + scalar field, pure no_std serial backend (the
# same curve25519-dalek the proven _crypto_spike pulls via ed25519-dalek;
# ristretto + Elligator hash-to-curve are compiled in unconditionally).
# No `rand_core` feature ⇒ no ::random; every scalar is loaded from bytes.
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
# SHA-512 for the ECVRF challenge / hash-to-curve expansion (the standard
# ECVRF-RISTRETTO255-SHA512 ciphersuite hash).
sha2 = { version = "0.10", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "service"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "wasm-bootstrap"] }

[target.'cfg(not(any(target_arch = "riscv64", target_arch = "wasm32")))'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "extension"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
