[workspace]

[package]
name = "crypto-spike"
version = "0.1.0"
edition = "2024"

[features]
default = ["bin"]
bin = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
ed25519-dalek = { version = "2", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "service"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "wasm-bootstrap"] }

[target.'cfg(not(any(target_arch = "riscv64", target_arch = "wasm32")))'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "extension"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
