[workspace]

[package]
name = "messenger"
description = "Built-in VOS actor: the E2EE edge of messaging. Holds each member's device-local MLS state, encrypts/decrypts at the node boundary, and drives the per-channel msg-log/msg-ctl actors."
keywords = ["vos", "actor", "messaging", "mls", "p2p"]
categories = ["network-programming", "cryptography"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/virto-network/vos"
homepage = "https://github.com/virto-network/vos"
authors = ["Daniel Olano <daniel@olanod.com>"]

[features]
# `bin` enables PVM entry-point emission. Default-on so `cargo actor`
# produces an actor ELF; Ref consumers set `default-features = false`.
default = ["bin"]
bin = []

[lib]
crate-type = ["rlib"]

# ── Flavor-agnostic deps (host + PVM) ──
[dependencies]
# Wire types shared with the channel actors + registry/chronos.
# `default-features = false` strips their PVM `bin` glue; portable, so one dep
# serves both flavors. chronos carries the BeaconRound type for the optional
# randomness hedge (absent chronos => no hedge, no behaviour change).
msg-log = { path = "../msg-log", default-features = false }
msg-ctl = { path = "../msg-ctl", default-features = false }
msg-directory = { path = "../msg-directory", default-features = false }
space-registry = { path = "../space-registry", default-features = false }
chronos = { path = "../chronos", default-features = false }
# zeroize for key material; `spin::Mutex` shares the mls-rs storage + CSPRNG
# providers across the Client's clones (uncontended in single-threaded dispatch).
zeroize = "1.8"
spin = { version = "0.10", default-features = false, features = ["mutex", "spin_mutex"] }

# ── Host flavor (unit tests + the typed Ref) ──
# vos host actor ABI + mls-rs (RFC 9420) with std. Ciphersuite 1
# (MLS_128_DHKEMX25519_AES128GCM_SHA256_Ed25519). The deterministic
# CipherSuiteProvider (crypto_provider.rs) draws the X25519 KEM + HPKE ephemeral
# from the host-seeded CSPRNG; getrandom mints the per-boot token + reg seed.
[target.'cfg(not(target_arch = "riscv64"))'.dependencies]
vos = { path = "../../vos", default-features = false, features = ["macros", "extension"] }
mls-rs = "0.55"
mls-rs-core = "0.27"
mls-rs-codec = "0.7"
mls-rs-crypto-rustcrypto = "0.22"
mls-rs-crypto-hpke = "0.21"
mls-rs-crypto-traits = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
ed25519-dalek = "2"
getrandom = "0.2"

# ── PVM actor flavor (the riscv64em-javm ELF; `cargo +nightly actor`) ──
# The SAME stack with std dropped — the no_std cut whose transpile
# tests/messenger_transpile.rs gates. Feature set = proven-transpiling minimum.
[target.'cfg(target_arch = "riscv64")'.dependencies]
vos = { path = "../../vos", default-features = false, features = ["macros", "service"] }
mls-rs = { version = "0.55", default-features = false, features = [
    "private_message",
    "by_ref_proposal",
    "custom_proposal",
    "out_of_order",
    "prior_epoch",
    "psk",
    "tree_index",
] }
mls-rs-core = { version = "0.27", default-features = false }
mls-rs-codec = { version = "0.7", default-features = false }
mls-rs-crypto-rustcrypto = { version = "0.22", default-features = false, features = ["getrandom"] }
mls-rs-crypto-hpke = { version = "0.21", default-features = false }
mls-rs-crypto-traits = { version = "0.22", default-features = false }
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
# riscv64em-javm has max-atomic-width 0: spin's atomics go through
# portable-atomic over critical-section (impl in lib.rs), and
# portable-atomic-util supplies the `Arc` alloc::sync can't without native atomics.
spin = { version = "0.10", default-features = false, features = ["portable_atomic"] }
portable-atomic = { version = "1", default-features = false, features = ["critical-section"] }
portable-atomic-util = { version = "0.2", default-features = false, features = ["alloc"] }
critical-section = { version = "1", default-features = false }

[dev-dependencies]
# The e2e test drives two real `vosx space up` daemons and dials one as a
# libp2p client to read the raw ciphertext log.
vos = { path = "../../vos", default-features = false, features = ["macros", "extension", "std", "network", "storage"] }
libp2p = { version = "0.56", default-features = false, features = ["tcp", "yamux", "noise", "tokio", "macros", "ping", "identify", "request-response", "gossipsub"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Unlike the sibling data actors, messenger stays at the default opt-level (3),
# NOT `opt-level = "s"`: its mls-rs HKDF→Ed25519 signer path mis-executes when
# transpiled from the size-optimized codegen (the PVM gate's `register` fails
# with "signer derivation failed"). `vos/tests/messenger_pvm` is the guard.
[profile.release]
lto = "fat"
codegen-units = 1
