[workspace]

[package]
name = "space-registry"
description = "Built-in VOS actor: per-space catalog of programs, agents, and members. Bundled into the vosx binary and registered as the per-space ServiceId::REGISTRY."
keywords = ["vos", "actor", "registry", "p2p"]
categories = ["data-structures", "network-programming"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/virto-network/vos"
homepage = "https://github.com/virto-network/vos"
authors = ["Daniel Olano <daniel@olanod.com>"]

[features]
default = ["bin"]
# `bin` enables PVM entry-point emission. Default-on so a plain
# `cargo build` (or `cargo actor`) produces an actor ELF; consumers
# depending on this crate as a Ref source turn it off via
# `default-features = false` so no entries land in their link.
bin = []

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_arch = "riscv64")'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "service"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "wasm-bootstrap"] }

[target.'cfg(not(any(target_arch = "riscv64", target_arch = "wasm32")))'.dependencies]
vos = { path = "../../vos", version = "0.1.0", default-features = false, features = ["macros", "extension"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
