[package]
name = "merkle-crdt"
description = "Generic no_std implementation of Merkle-CRDTs: Merkle-DAGs meet CRDTs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
redb = ["std", "dep:redb"]

[dependencies]
redb = { version = "2", optional = true }

[dev-dependencies]
sha2 = "0.10"
