[package]
name = "pvm-actors"
description = "Minimal no_std/no_alloc actor framework for cooperative async PVM programs"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
pvm-actors-macros = { path = "../pvm-actors-macros", optional = true }

[dev-dependencies]
